--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
     <div class="main-menu fixed-top main-menu-left">
         <nav class="nav-menu">
             <ul class="menu">
-                <li><a href="index-1.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html" class="active">About</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="works.html">Works</a></li>
