--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                         <h6> Hi , There! </h6>
                         <h1 class="cd-headline clip">I Am 
                             <span class="cd-words-wrapper base-color">
-                                <b class="is-visible"> Elizabeth Elmiz. </b>
-                                <b>UX Designer.</b>
-                                <b>Photographer.</b>
+                                <b class="is-visible"> Mehedi Hasan Masum. </b>
+                                <b>3D Designer.</b>
+                                <b>3D Artist.</b>
                             </span>
                         </h1>
                         <p class="max-width-400">
