--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" sizes="16x16" href="assets/img/riya.png">
 
     <!-- Title -->
-    <title> Elmiz - Personal Portfolio Template </title>
+    <title> Riya </title>
 
     <!-- CSS Plugins -->
     <link rel="stylesheet" href="assets/css/all.css">
