--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <h6> Hi , There! </h6>
                         <h1 class="cd-headline clip">I Am 
                             <span class="cd-words-wrapper base-color">
-                                <b class="is-visible"> Mehedi Hasan Masum. </b>
+                                <b class="is-visible"> Mehedi Hasan. </b>
                                 <b>3D Designer.</b>
                                 <b>3D Artist.</b>
                             </span>
