--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- favicon -->
-    <link rel="icon" sizes="16x16" href="assets/img/riya.png">
+    <link rel="icon" sizes="16x16" href="assets/img/r.png">
 
     <!-- Title -->
     <title> Riya </title>
