--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </div>
 
     <!--Home-->
-    <section class="home home-6 d-flex align-items-center" style="background-image: url(assets/img/bg/3.png)">
+    <section class="home home-6 d-flex align-items-center" style="background-image: url(assets/img/bg/darling.png)">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6"></div>
