--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="row">
                 <div class="col-lg-6"></div>
                 <div class="col-lg-6">
-                    <div class="home-banner wow customFadeInUp delay-0-2s slow">                      
+                    <div class="home-banner wow customFadeInUp delay-0-1s slow">                      
                         <h6> Hi , There! </h6>
                         <h1 class="cd-headline clip">I Am 
                             <span class="cd-words-wrapper base-color">
@@ -135,7 +135,7 @@
                 <div class="row ">
                     <div class="col-lg-6"></div>
                     <div class="col-lg-6 text-center">
-                        <span class="wow customFadeInUp delay-0-4s slow">© 2020 Elmiz — All Rights Reserved.</span>
+                        <span class="wow customFadeInUp delay-0-4s slow">© 2021 Riya. All Rights Reserved.</span>
                     </div>
                 </div>
             </div>
