--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="row">
                 <div class="col-lg-6"></div>
                 <div class="col-lg-6">
-                    <a class="logo wow customFadeInUp slow" href="#">E</a>
+                    <a class="logo wow customFadeInUp slow" href="#">R</a>
                 </div> 
             </div>
         </div>
