--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="col-lg-6"></div>
                 <div class="col-lg-6">
                     <div class="home-banner wow customFadeInUp delay-0-1s slow">                      
-                        <h6> Hi , There! </h6>
+                        <h6> Welcome </h6>
                         <h1 class="cd-headline clip">I Am 
                             <span class="cd-words-wrapper base-color">
                                 <b class="is-visible"> Mehedi Hasan. </b>
