--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="row">
                 <div class="col-lg-6"></div>
                 <div class="col-lg-6">
-                    <img src="riya.png" alt="Girl in a jacket" width="500" height="600"> 
+                    <img src="riya.png" alt="riya" width="500" height="600"> 
                 </div> 
             </div>
         </div>
