--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
                     <img src="riya.png" alt="riya" width="500" height="600"> 
 
     <!--Home-->
-    <section class="home home-6 d-flex align-items-center" style="background-image: url(assets/img/bg/darling.png)">
+    {
+        background: url(assets/img/bg/darling.png);
+        background-repeat: no-repeat;
+        background-size: auto;
+      }
         <div class="container">
             <div class="row">
                 <div class="col-lg-6"></div>
