--- a/index.html
+++ b/index.html
@@ -66,14 +66,19 @@
             </div>
         </a>
     </div>
-                    <img src="riya.png" alt="riya" width="500" height="600"> 
+    <div class="main-logo text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6"></div>
+                <div class="col-lg-6">
+                    <a class="logo wow customFadeInUp slow" href="#">R</a>
+                </div> 
+            </div>
+        </div>
+    </div>
 
     <!--Home-->
-    {
-        background: url(assets/img/bg/darling.png);
-        background-repeat: no-repeat;
-        background-size: auto;
-      }
+    <section class="home home-6 d-flex align-items-center" style="background-image: url(assets/img/bg/darling.png)">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6"></div>
