--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="col-lg-6"></div>
                 <div class="col-lg-6">
                     <div class="home-banner wow customFadeInUp delay-0-1s slow">                      
-                        <h6> Welcome </h6>
+                        <h6> Hello </h6>
                         <h1 class="cd-headline clip">I Am 
                             <span class="cd-words-wrapper base-color">
                                 <b class="is-visible"> Mehedi Hasan. </b>
@@ -134,7 +134,7 @@
                 <div class="row ">
                     <div class="col-lg-6"></div>
                     <div class="col-lg-6 text-center">
-                        <span class="wow customFadeInUp delay-0-4s slow">© 2021 Riya. All Rights Reserved.</span>
+                        <footer>&copy; 2021 Riya. All Rights Reserved.</footer>
                     </div>
                 </div>
             </div>
