--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
     </div>
 
     <!--Home-->
-    <section class="home home-6 d-flex align-items-center" style="background-image: url(assets/img/bg/darling.png)">
+    <section class="home home-6 d-flex align-items-center" style="background-image: url(assets/img/bg/2.jpg
+    )">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6"></div>
