--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
     </div>
 
     <!--Home-->
-    <section class="home home-6 d-flex align-items-center" style="background-image: url(assets/img/bg/2.jpg
-    )">
+    <section class="home home-6 d-flex align-items-center" style="background-image: url(assets/img/bg/1.jpg)">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6"></div>
